--- a/k8s/local-skywalking/customers-svc.yml
+++ b/k8s/local-skywalking/customers-svc.yml
@@ -29,7 +29,7 @@ spec:
         - name: customers
           image: spring2go/spring-petclinic-customers-service:1.0.0.RELEASE
           env:
-            - name: JAVA_OPTS
+            - name: JAVA_TOOL_OPTIONS
               value: -javaagent:/sidecar/agent/skywalking-agent.jar
             - name: SW_AGENT_NAME
               value: petclinic-customers
