--- a/k8s/local-skywalking/visits-svc.yml
+++ b/k8s/local-skywalking/visits-svc.yml
@@ -33,7 +33,7 @@ spec:
               path: /actuator/health
               port: 8080
           env:
-            - name: JAVA_OPTS
+            - name: JAVA_TOOL_OPTIONS
               value: -javaagent:/sidecar/agent/skywalking-agent.jar
             - name: SW_AGENT_NAME
               value: petclinic-visits
